# email_sender

./: CMakeLists.txt  README.md
example/: config.example
src/: config.cpp  config.h  main.cpp  sender.cpp  sender.h
